fixed alignment problem from banner

--- a/css/style.css
+++ b/css/style.css
@@ -190,10 +190,10 @@ section.section h1 {
     font-size: 1.5rem;
   }
   #banner .typing h1 {
-    font-size: 4rem;
+    font-size: 3rem;
   }
   #banner .typing span::after {
-    height: 4rem;
+    height: 3rem;
     margin-left: 0.5rem;
   }
   #banner p {
